# atmega-snake

./: CMakeLists.txt
lib/: CMakeLists.txt
simulide/: atmega-snake.sim1
src/: CMakeLists.txt  adc.c  adc.h  bytes_matrix.c  bytes_matrix.h  direction.h  display.c  display.h  food_spawner.c  food_spawner.h  joystick.c  joystick.h  leg.c  leg.h  main.c  matrix.h  matrix_keyboard.c  matrix_keyboard.h  mem.h  oled.c  oled.h  point.h  real_inline.h  snake.c  snake.h  square.c  square.h  timer.c  timer.h  twi.c  twi.h  uart.c  uart.h
